--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
     "name": "@artikus13/ai-chat-widget",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "AI chat widget for websites, works with WordPress",
     "main": "dist/chat.js",
     "module": "dist/chat.es.js",
     "files": [
-        "dist"
+        "dist",
+        "src/scss"
     ],
     "exports": {
         ".": {
             "import": "./dist/chat.es.js",
-            "require": "./dist/chat.js"
-        }
+            "require": "./dist/chat.js",
+        },
+        "./dist/chat.css": "./dist/chat.css"
     },
     "scripts": {
         "dev": "vite",
