--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,10 @@
     },
     "rules": {
         "no-unused-vars": "warn",
-        "no-console": "off"
+        "no-console": "off",
+        "curly": [
+            "error",
+            "all"
+        ]
     }
 }
