--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "preview": "vite preview",
         "publish": "npm run build && npm publish --access public",
         "lint": "eslint ./src/js --ext .js",
+        "lint:fix": "eslint ./src/js --ext .js --fix",
         "format": "prettier --write \"src/js/**/*.js\""
     },
     "keywords": [
@@ -44,6 +45,7 @@
         "cross-env": "^7.0.3",
         "eslint": "^9.33.0",
         "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
         "globals": "^16.3.0",
         "prettier": "^3.6.2",
         "sass": "^1.90.0",
