--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@artikus13/ai-chat-widget",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "description": "AI chat widget for websites, works with WordPress",
     "main": "dist/chat.js",
     "module": "dist/chat.es.js",
@@ -13,7 +13,8 @@
             "import": "./dist/chat.es.js",
             "require": "./dist/chat.js"
         },
-        "./dist/chat.css": "./dist/chat.css"
+        "./dist/chat.css": "./dist/chat.css",
+        "./dist/style.css": "./dist/style.css"
     },
     "scripts": {
         "dev": "vite",
