--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@artikus13/ai-chat-widget",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "description": "AI chat widget for websites, works with WordPress",
     "main": "dist/chat.js",
     "module": "dist/chat.es.js",
@@ -25,7 +25,10 @@
         "publish": "npm run build && npm publish --access public",
         "lint": "eslint ./src/js --ext .js",
         "lint:fix": "eslint ./src/js --ext .js --fix",
-        "format": "prettier --write \"src/js/**/*.js\""
+        "format": "prettier --write \"src/js/**/*.js\"",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest run --coverage"
     },
     "keywords": [
         "chat",
@@ -48,6 +51,7 @@
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "globals": "^16.3.0",
+        "happy-dom": "^17.6.1",
         "prettier": "^3.6.2",
         "sass": "^1.90.0",
         "sass-embedded": "^1.90.0",
