--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
         "lint:fix": "eslint ./src/js --ext .js --fix",
         "format": "prettier --write \"src/js/**/*.js\"",
         "test": "vitest",
+        "test:unit": "vitest run src/test/unit/",
+        "test:integration": "vitest run src/test/integration/",
+        "test:watch": "vitest",
         "test:ui": "vitest --ui",
-        "test:coverage": "vitest run --coverage"
+        "test:coverage": "vitest run --coverage",
+        "test:e2e": "cypress run"
     },
     "keywords": [
         "chat",
@@ -46,16 +50,23 @@
     "license": "MIT",
     "devDependencies": {
         "@eslint/js": "^9.33.0",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.8.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@vitest/eslint-plugin": "^1.3.9",
         "cross-env": "^7.0.3",
         "eslint": "^9.33.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-testing-library": "^7.7.0",
         "globals": "^16.3.0",
         "happy-dom": "^17.6.1",
+        "jsdom": "^26.1.0",
         "prettier": "^3.6.2",
         "sass": "^1.90.0",
         "sass-embedded": "^1.90.0",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "vitest": "^3.2.4"
     },
     "dependencies": {
         "dompurify": "^3.2.6",
