--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
         "test:coverage": "vitest run --coverage",
-        "test:e2e": "cypress run"
+        "test:e2e": "vitest run src/test/e2e/"
     },
     "keywords": [
         "chat",
